[package]
name = "mint-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
# anchor-lang = "0.24.2"
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
anchor-spl = "0.24.2"
#anchor-lang = {git = "https://github.com/project-serum/anchor", tag = "v0.24.2", features = ["init-if-needed"]}
